--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-calendar": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.2.1",
+    "react-social-icons": "^6.16.0",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
