--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "primereact": "^10.6.3",
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
+    "react-datepicker": "^6.9.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.2.1",
