--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "@types/jest": "^29.5.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "date-fns": "^3.6.0",
     "primereact": "^10.6.3",
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
+    "react-datepicker": "^6.9.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.2.1",
     "react-social-icons": "^6.16.0",
