--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-datetime-picker": "^5.6.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.3",
     "react-router-dom": "^6.2.1",
     "react-social-icons": "^6.16.0",
     "web-vitals": "^2.1.4"
