--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "locofy-react-project",
+  "name": "style-savvy-project",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
