--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.51.3",
     "react-router-dom": "^6.2.1",
     "react-social-icons": "^6.16.0",
+    "react-table": "^7.8.0",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
