--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "style-savvy-project",
   "version": "0.1.0",
   "private": true,
+  "keywords": [
+    "primereact",
+    "react",
+    "vite",
+    "starter"
+  ],
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -10,7 +16,8 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "date-fns": "^3.6.0",
-    "primereact": "^10.6.3",
+    "primereact": "latest",
+    "primeicons": "^7.0.0",
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
     "react-datepicker": "^6.9.0",
