--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "@types/jest": "^29.5.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "axios": "^1.6.8",
     "date-fns": "^3.6.0",
-    "primereact": "latest",
     "primeicons": "^7.0.0",
+    "primereact": "latest",
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
     "react-datepicker": "^6.9.0",
@@ -28,6 +29,7 @@
     "react-router-dom": "^6.2.1",
     "react-social-icons": "^6.16.0",
     "react-table": "^7.8.0",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
