--- a/package.json
+++ b/package.json
@@ -49,10 +49,10 @@
     "vite": "^5.2.3"
   },
   "scripts": {
-    "start": "vite",
-    "build": "vite build",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "root": true
